Camlp4s Version 1.0:
--------------------

* [01 Dec 06] In "pa_macro.cmo", the expression after IFDEF can use
  the infix operators OR and AND, the prefix one NOT and expressions
  between parentheses.

* [01 Dec 06] The same distribution can compile with several versions
  of OCaml. After "./configure", the good version of OCaml interfaces
  are selected.

* [01 Dec 06] The type "location" is now abstract. Defined in stdpp.mli.

* [01 Dec 06] First distributed version; started from old camlp4
  version 3.06 and updated.